@@ -84,7 +84,11 @@
                         --add-opens storm.spring/st.orm.spring=ALL-UNNAMED
                         --add-opens storm.spring/st.orm.spring.impl=ALL-UNNAMED
                         --add-opens storm.spring/st.orm.spring.model=ALL-UNNAMED
+                        --add-opens storm.spring/st.orm.spring.boot=ALL-UNNAMED
                         --add-opens storm.spring/st.orm.spring=spring.core
+                        --add-opens storm.spring/st.orm.spring.boot=spring.core
+                        --add-reads storm.spring=ch.qos.logback.classic
+                        --add-reads storm.spring=ch.qos.logback.core
                         --add-opens storm.spring/st.orm.spring.model=storm.java
                         --add-opens storm.spring/st.orm.spring.model=storm.core
                         -Dstorm.ansi_escaping=true
